# Pip-Matrix-Resolver

./: .clang-format  .gitignore  CMakeLists.txt  Installation.txt  PipMatrixResolver.txt  PipMatrixResolverQt.qrc  README.md  Terminal.Upgrade.Summary.txt  The.Plan.txt  cleanbash.sh  mainwindow_cpp.txt  source_files.txt  src2txt.bat  src2txt.sh
backup/: PipMatrixResolver-2025-11-01_19-13-39.txt  PipMatrixResolver-2025-11-01_19-36-22.txt  PipMatrixResolver-2025-11-01_19-37-34.txt  PipMatrixResolver-2025-11-01_19-38-52.txt  PipMatrixResolver-2025-11-01_19-52-13.txt  PipMatrixResolver-2025-11-01_20-12-37.txt  PipMatrixResolver-2025-11-01_20-15-04.txt  PipMatrixResolver-2025-11-01_20-17-45.txt  PipMatrixResolver-2025-11-01_20-25-49.txt  PipMatrixResolver-2025-11-01_21-06-00.txt  PipMatrixResolver-2025-11-01_22-17-05.txt
src/: BatchRunner.h  CommandsTab.cpp  CommandsTab.h  Config.h  Constants.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MatrixHistory.cpp  MatrixHistory.h  MatrixHistory.ui  MatrixUtility.cpp  MatrixUtility.h  PipToolsRunner.h  ResolverEngine.cpp  ResolverEngine.h  Settings.cpp  Settings.h  TerminalEngine.cpp  TerminalEngine.h  VenvManager.cpp  VenvManager.h  main.cpp  venv_manager.py
src_text/: BatchRunner.cpp.txt  MainWindow.cpp.txt  MainWindow.h.txt  MainWindow.ui.autosave.txt  MainWindow.ui.txt  MatrixHistory.cpp.txt  MatrixUtility.cpp.txt  PipMatrixResolverQt.qrc.txt  PipToolsRunner.cpp.txt  VenvManager.cpp.txt  VenvManager.h.txt  main.cpp.txt
tests/: gtest_resolver.cpp  qt_test_main.cpp  qtest_mainwindow.cpp  test_mainwindow.cpp  test_resolver.cpp
translations/: MatrixHistory_en.ts  MatrixHistory_es.ts  MatrixUtility_en.ts  MatrixUtility_es.ts  PipMatrixResolverQt_en.ts
